--- a/src/Layout/Footer/Footer.module.scss
+++ b/src/Layout/Footer/Footer.module.scss
@@ -5,18 +5,26 @@
     position: relative;
     z-index: 10;
     max-width: 69.375rem;
+    width: 90%;
     margin: auto;
     padding-top: 4rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    @media only screen and (max-width:650px) {
+      flex-direction: column;
+    }
   }
   &__logo {
+    @media only screen and (max-width:650px) {
+     margin-bottom: 2rem; 
+    }
   }
   &__social {
     width: 8.75rem;
     display: flex;
     justify-content: space-between;
+    
   }
   &__icon {
     transition: all 0.3s;
@@ -27,6 +35,7 @@
   }
   &__line {
     max-width: 69.375rem;
+    width: 90%;
     margin: 2rem auto;
   }
   &__navigation {
@@ -37,6 +46,11 @@
     margin: 0 auto 2rem;
     display: flex;
     justify-content: space-between;
+    @media only screen and (max-width:650px) {
+     flex-direction: column; 
+     align-items: center;
+     text-align: center;
+    }
     &--title {
       text-transform: uppercase;
       font-size: 0.9rem;
@@ -47,6 +61,9 @@
     &--nav {
       list-style: none;
       padding-inline-start: 0;
+      @media only screen and (max-width:650px) {
+        margin-bottom: 2rem;
+      }
       &-item {
         text-transform: uppercase;
         font-size: 0.9rem;
@@ -69,6 +86,9 @@
     top: 0;
     left: 0;
     z-index: 0;
+    @media only screen and (max-width:650px) {
+      width: 100%;
+    }
   }
 }
 .attribution {
