--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -3,16 +3,31 @@
   width: 90%;
   margin: auto;
   color: var(--color-grey-dark);
+  @media only screen and (max-width:1024px) {
+      text-align: center;
+  }
+  &__line{
+    margin: 0 auto;
+    margin-top: 10rem;
+    width: 10rem;
+  }
   &__heading {
     margin: 3.75rem 0 5rem 0;
     font-size: 4.5rem;
     font-family: var(--heading-font);
     font-weight: 300;
+    @media only screen and (max-width:425px) {
+     font-size: 2.5rem; 
+    }
 }
 &__features{
     display: flex;
     gap: 2rem;
     justify-content: space-between;
+    @media only screen and (max-width:768px) {
+     flex-direction: column; 
+     align-items: center;
+    }
 }
 &__feature{
     max-width: 20rem;
