--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -1,4 +1,5 @@
 .button {
+
   background-color: transparent;
   text-transform: uppercase;
   font-size: 0.9rem;
@@ -8,6 +9,8 @@
   border: none;
   border: 2px solid transparent;
   transition: all .3s;
+  position: relative;
+  z-index: 1;
   &__dark {
     color: var(--color-grey-dark);
     border-color: var(--color-grey-dark);
@@ -20,6 +23,7 @@
   &__light {
     color: var(--color-grey-light);
     border-color: var(--color-grey-light);
+
     &:hover{
       cursor: pointer;
       background-color: var(--color-grey-light);
