--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -1,14 +1,20 @@
 .navbar {
   background-color: white;
-    max-width: 69.375rem;
-    width: 90%;
-    margin: 2rem auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    position: relative;
-    z-index: 100;
+  max-width: 69.375rem;
+  width: 90%;
+  margin: 2rem auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  overflow: visible;
+
+  @media only screen and (max-width: 650px) {
+    width: 100%;
+  }
   &__logo {
+    @media only screen and (max-width: 650px) {
+      margin-left: 2rem;
+    }
   }
   &__nav {
     display: flex;
@@ -17,17 +23,46 @@
     padding-inline-start: 0;
     color: var(--color-grey);
     font-weight: 700;
+    @media only screen and (max-width: 650px) {
+      position: absolute;
+      top: 8rem;
+      left: 0;
+      right: 0;
+      background-color: var(--color-primary);
+      color: var(--color-grey-light);
+      width: 100%;
+      height: 80vh;
+      padding-top: 2rem;
+      flex-direction: column;
+      z-index: 200;
+    }
     &--item {
-        font-size: .9rem;
-        text-transform: uppercase;
-        transition: all .3s;
-        &:hover{
-          cursor: pointer;
-            color: var(--color-grey-dark);
+      font-size: 0.9rem;
+      text-transform: uppercase;
+      transition: all 0.3s;
+      @media only screen and (max-width: 650px) {
+        width: 90%;
+        text-align: center;
+        font-size: 1.2rem;
+      }
+      &:hover {
+        cursor: pointer;
+        color: var(--color-grey-dark);
+      }
+      &:not(:last-child) {
+        margin-right: 2rem;
+        @media only screen and (max-width: 650px) {
+          margin-right: unset;
+          margin-bottom: 3rem;
         }
-        &:not(:last-child){
-            margin-right: 2rem;
-        }
+      }
     }
   }
+  &__pattern {
+    position: absolute;
+    bottom: 0;
+  }
+}
+.long__btn{
+  width: 100%;
 }
